[web] Prevent horizontal scroll on main-content

--- a/web/style.css
+++ b/web/style.css
@@ -112,6 +112,7 @@ div.main-content-container {
 div.main-content {
   background-color: #FFFFFFD5;
   min-height: calc(100% - 62px);
+  overflow-x: hidden;
 }
 
 table.calendar {
